Updated color guide

--- a/index.html
+++ b/index.html
@@ -8,6 +8,64 @@
         <main>
             <section class="styles" id="color-style">
                 <h2>Colors</h2>
+                <h3>Soft Palette</h3>
+                <div class="color-container soft-palette">
+                    <div class="color-panel light-lime-green">
+                        <p class="color-label">Light lime green</p>
+                        <p class="color-hex">#C5D5CB</p>
+                    </div>
+                    <div class="color-panel dark-lime-green">
+                        <p class="color-label">Dark lime green</p>
+                        <p class="color-hex">#9FA8A3</p>
+                    </div>
+                    <div class="color-panel beige">
+                        <p class="color-label">Beige</p>
+                        <p class="color-hex">#E3E0CF</p>
+                    </div>
+                    <div class="color-panel brown">
+                        <p class="color-label">Brown</p>
+                        <p class="color-hex">#C2B490</p>
+                    </div>
+                </div>
+                <h3>Dark Palette</h3>
+                <div class="color-container dark-palette">
+                    <div class="color-panel blue">
+                        <p class="color-label">Blue</p>
+                        <p class="color-hex">#0F2862</p>
+                    </div>
+                    <div class="color-panel red">
+                        <p class="color-label">Red</p>
+                        <p class="color-hex">#9E363A</p>
+                    </div>
+                    <div class="color-panel dark-blue">
+                        <p class="color-label">Dark blue</p>
+                        <p class="color-hex">#091F36</p>
+                    </div>
+                    <div class="color-panel grey-blue">
+                        <p class="color-label">Grey blue</p>
+                        <p class="color-hex">#4F5F76</p>
+                    </div>
+                </div>
+                <h3>Contrast</h3>
+                <div class="color-container contrast">
+                    <div class="color-panel slate">
+                        <p class="color-label">Slate</p>
+                        <p class="color-hex">#262626</p>
+                    </div>
+                    <div class="color-panel grey">
+                        <p class="color-label">Grey</p>
+                        <p class="color-hex">#3F3F3F</p>
+                    </div>
+                    <div class="color-panel white">
+                        <p class="color-label">White</p>
+                        <p class="color-hex">#F5F5F5</p>
+                    </div>
+                    <div class="color-panel light-grey">
+                        <p class="color-label">Light-grey</p>
+                        <p class="color-hex">#DCDCDC</p>
+                    </div>
+                </div>
+
             </section>
             <section class="styles" id="font-style">
                 <h2>Fonts</h2>
