Updated fonts and text style guide - partially still in-progress

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
     <header>
         <link rel="stylesheet" href="styles.css">
-        <h1>@Crogmi Website Design Guide</h1>
+        <h1 class="title">@Crogmi Website Design Guide</h1>
     </header>
     <body>
         <main>
             <section class="styles" id="color-style">
-                <h2>Colors</h2>
-                <h3>Soft Palette</h3>
+                <h2 class="section-ttile">Colors</h2>
+                <h3 class="color-scheme">Soft Palette</h3>
                 <div class="color-container soft-palette">
                     <div class="color-panel light-lime-green">
                         <p class="color-label">Light lime green</p>
@@ -27,7 +27,7 @@
                         <p class="color-hex">#C2B490</p>
                     </div>
                 </div>
-                <h3>Dark Palette</h3>
+                <h3 class="color-scheme">Dark Palette</h3>
                 <div class="color-container dark-palette">
                     <div class="color-panel blue">
                         <p class="color-label">Blue</p>
@@ -46,7 +46,7 @@
                         <p class="color-hex">#4F5F76</p>
                     </div>
                 </div>
-                <h3>Contrast</h3>
+                <h3 class="color-scheme">Contrast</h3>
                 <div class="color-container contrast">
                     <div class="color-panel slate">
                         <p class="color-label">Slate</p>
@@ -65,13 +65,54 @@
                         <p class="color-hex">#DCDCDC</p>
                     </div>
                 </div>
-
             </section>
             <section class="styles" id="font-style">
-                <h2>Fonts</h2>
+                <h2 class="section-title">Fonts</h2>
+                <div class="font-panel font-mulish">
+                    <h3 class="font-title">Mulish</h3>
+                    <p class="font-regular">Almost before we knew it, we had left the ground.</p>
+                    <p class="font-bold">Almost before we knew it, we had left the ground.</p>
+                    <p class="font-italic">Almost before we knew it, we had left the ground.</p>
+                </div>
+                <div class="font-panel font-lato">
+                    <h3 class="font-title">Lato</h3>
+                    <p class="font-regular">Almost before we knew it, we had left the ground.</p>
+                    <p class="font-bold">Almost before we knew it, we had left the ground.</p>
+                    <p class="font-italic">Almost before we knew it, we had left the ground.</p>
+                </div>
+                <div class="font-panel font-merriweather">
+                    <h3 class="font-title">Merriweather</h3>
+                    <p class="font-regular">Almost before we knew it, we had left the ground.</p>
+                    <p class="font-bold">Almost before we knew it, we had left the ground.</p>
+                    <p class="font-italic">Almost before we knew it, we had left the ground.</p>
+                </div>
+                <div class="font-panel font-aleo">
+                    <h3 class="font-title">Aleo</h3>
+                    <p class="font-regular">Almost before we knew it, we had left the ground.</p>
+                    <p class="font-bold">Almost before we knew it, we had left the ground.</p>
+                    <p class="font-italic">Almost before we knew it, we had left the ground.</p>
+                </div>
             </section>
             <section class="styles" id="text-style">
                 <h2>Text</h2>
+                <h1>H1: Main page heading</h1>
+                <ul class="text-details">
+                    <li>Font-weight: 700 (bold)</li>
+                    <li>Font-size: 26px</li>
+                    <li>Font-family: Nunito Sans</li>
+                </ul>
+                <h2>H2: Subheading</h2>
+                <ul class="text-details">
+                    <li>Font-weight: 500</li>
+                    <li>Font-size: 18px</li>
+                    <li>Font-family: Poppins</li>
+                </ul>
+                <p>P: Paragraph text</p>
+                <ul class="text-details">
+                    <li>Font-weight: 400 (regular)</li>
+                    <li>Font-size: 14px</li>
+                    <li>Font-family: Poppins</li>
+                </ul>
             </section>
         </main>
         <footer>
