Updated header, text styles, and CSS

--- a/index.html
+++ b/index.html
@@ -94,29 +94,29 @@
                 </div>
             </section>
             <section class="styles" id="text-style">
-                <h2>Text</h2>
-                <h1>H1: Main page heading</h1>
+                <h2 class="section-title">Text</h2>
+                <h1 class="text-title" id="text-h1">H1: Main page heading</h1>
                 <ul class="text-details">
                     <li>Font-weight: 700 (bold)</li>
                     <li>Font-size: 26px</li>
-                    <li>Font-family: Nunito Sans</li>
+                    <li>Font-family: Mulish</li>
                 </ul>
-                <h2>H2: Subheading</h2>
+                <h2 class="text-title" id="text-h2">H2: Subheading</h2>
                 <ul class="text-details">
-                    <li>Font-weight: 500</li>
-                    <li>Font-size: 18px</li>
-                    <li>Font-family: Poppins</li>
+                    <li>Font-weight: 600</li>
+                    <li>Font-size: 22px</li>
+                    <li>Font-family: Mulish</li>
                 </ul>
-                <p>P: Paragraph text</p>
+                <p class="text-title" id="text-p">P: Paragraph text</p>
                 <ul class="text-details">
                     <li>Font-weight: 400 (regular)</li>
                     <li>Font-size: 14px</li>
-                    <li>Font-family: Poppins</li>
+                    <li>Font-family: Mulish</li>
                 </ul>
             </section>
         </main>
         <footer>
-
+            <p>Website design guide created by Chris Ogami for Chris Ogami. The website and the contents within shall not be used without the written consent of Chris Ogami.</p>
         </footer>
     </body>
 </html>
